--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,3 +14,10 @@ $fa-font-path:"../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
+
+
+//Changing menu color when clicked
+.router-link-exact-active{
+    background-color: #3f51b5;
+    color:white !important;
+}
